Fixed styling and made text and icons alignment responsive

--- a/src/App.css
+++ b/src/App.css
@@ -166,42 +166,12 @@ li a {
   line-height: 12px;
 }
 
-/* .icon-left {
-  position: absolute;
-  width: 22px;
-  height: 22px;
-  left: calc(50% - 22px/2 - 120px);
-  top: calc(50% - 22px/2 - 8px);
-}
-
-.icon-center {
-  position: absolute;
-  width: 18px;
-  height: 16px;
-  left: calc(50% - 18px/2);
-  top: calc(50% - 16px/2 + 7px);
-  mix-blend-mode: normal;
-  transform: matrix(1, 0, 0, -1, 0, 0);
-}
-
-.icon-right {
-  position: absolute;
-  left: 16.67%;
-  right: 16.67%;
-  top: 16.67%;
-  bottom: 16.67%;
-} */
-
 .div-ul {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   height: 100%;
 }
-
-/* .padding-top-half {
-  padding-top: 2rem;
-} */
 
 .button-wrapper {
   height: 100%;
@@ -287,7 +257,7 @@ li a {
 }
 
 /* assets */
-.human3{
+.human3 {
   position: absolute;
   z-index: 100;
   top: 19.5%;
@@ -312,4 +282,12 @@ li a {
   background: #FFFFFF;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 0px 2px rgba(0, 0, 0, 0.12);
   border-radius: 2px;
+}
+
+.padding-right-half {
+  padding-right: 0.5rem;
+}
+
+.padding-right-1 {
+  padding-right: 1rem;
 }
